# rules-js-exec-platform-repro

./: .bazelrc  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  README.md  bazel_lib_run_binary_tool_runfiles.patch  package.json  pnpm-lock.yaml  rules_js_exec_tool_runfiles.patch  rules_js_execroot_entry_point.patch  rules_js_optional_native_deps.patch  uses_rolldown.mjs
.github/workflows/: repro.yml
