bazel_dep(name = "rules_nodejs", version = "6.7.3", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "platforms", version = "1.0.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.22.0")
use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = ".npmrc",
    pnpm_lock = "pnpm-lock.yaml",
)
use_repo(npm, "npm")
